Updated service name and removed grpc
