# gen/http/create/server/encode_decode.go
@@ -1,172 +1,0 @@
-// Code generated by goa v3.1.1, DO NOT EDIT.
-//
-// create HTTP server encoders and decoders
-//
-// Command:
-// $ goa gen crud/design
-
-package server
-
-import (
-	"context"
-	create "crud/gen/create"
-	"io"
-	"net/http"
-	"strconv"
-
-	goahttp "goa.design/goa/v3/http"
-	goa "goa.design/goa/v3/pkg"
-)
-
-// EncodeCreateResponse returns an encoder for responses returned by the create
-// create endpoint.
-func EncodeCreateResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
-	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
-		res := v.(*create.Blog)
-		enc := encoder(ctx, w)
-		body := NewCreateResponseBody(res)
-		w.WriteHeader(http.StatusCreated)
-		return enc.Encode(body)
-	}
-}
-
-// DecodeCreateRequest returns a decoder for requests sent to the create create
-// endpoint.
-func DecodeCreateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
-	return func(r *http.Request) (interface{}, error) {
-		var (
-			body CreateRequestBody
-			err  error
-		)
-		err = decoder(r).Decode(&body)
-		if err != nil {
-			if err == io.EOF {
-				return nil, goa.MissingPayloadError()
-			}
-			return nil, goa.DecodePayloadError(err.Error())
-		}
-		err = ValidateCreateRequestBody(&body)
-		if err != nil {
-			return nil, err
-		}
-		payload := NewCreateBlog(&body)
-
-		return payload, nil
-	}
-}
-
-// EncodeListResponse returns an encoder for responses returned by the create
-// list endpoint.
-func EncodeListResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
-	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
-		res := v.([]*create.Storedblog)
-		enc := encoder(ctx, w)
-		body := NewListResponseBody(res)
-		w.WriteHeader(http.StatusOK)
-		return enc.Encode(body)
-	}
-}
-
-// EncodeRemoveResponse returns an encoder for responses returned by the create
-// remove endpoint.
-func EncodeRemoveResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
-	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
-		w.WriteHeader(http.StatusNoContent)
-		return nil
-	}
-}
-
-// DecodeRemoveRequest returns a decoder for requests sent to the create remove
-// endpoint.
-func DecodeRemoveRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
-	return func(r *http.Request) (interface{}, error) {
-		var (
-			id  uint32
-			err error
-
-			params = mux.Vars(r)
-		)
-		{
-			idRaw := params["id"]
-			v, err2 := strconv.ParseUint(idRaw, 10, 32)
-			if err2 != nil {
-				err = goa.MergeErrors(err, goa.InvalidFieldTypeError("id", idRaw, "unsigned integer"))
-			}
-			id = uint32(v)
-		}
-		if err != nil {
-			return nil, err
-		}
-		payload := NewRemovePayload(id)
-
-		return payload, nil
-	}
-}
-
-// EncodeUpdateResponse returns an encoder for responses returned by the create
-// update endpoint.
-func EncodeUpdateResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
-	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
-		w.WriteHeader(http.StatusNoContent)
-		return nil
-	}
-}
-
-// DecodeUpdateRequest returns a decoder for requests sent to the create update
-// endpoint.
-func DecodeUpdateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
-	return func(r *http.Request) (interface{}, error) {
-		var (
-			body UpdateRequestBody
-			err  error
-		)
-		err = decoder(r).Decode(&body)
-		if err != nil {
-			if err == io.EOF {
-				return nil, goa.MissingPayloadError()
-			}
-			return nil, goa.DecodePayloadError(err.Error())
-		}
-		err = ValidateUpdateRequestBody(&body)
-		if err != nil {
-			return nil, err
-		}
-
-		var (
-			id uint32
-
-			params = mux.Vars(r)
-		)
-		{
-			idRaw := params["id"]
-			v, err2 := strconv.ParseUint(idRaw, 10, 32)
-			if err2 != nil {
-				err = goa.MergeErrors(err, goa.InvalidFieldTypeError("id", idRaw, "unsigned integer"))
-			}
-			id = uint32(v)
-		}
-		if err != nil {
-			return nil, err
-		}
-		payload := NewUpdatePayload(&body, id)
-
-		return payload, nil
-	}
-}
-
-// marshalCreateStoredblogToStoredblogResponse builds a value of type
-// *StoredblogResponse from a value of type *create.Storedblog.
-func marshalCreateStoredblogToStoredblogResponse(v *create.Storedblog) *StoredblogResponse {
-	res := &StoredblogResponse{
-		ID:   v.ID,
-		Name: v.Name,
-	}
-	if v.Comments != nil {
-		res.Comments = make([]string, len(v.Comments))
-		for i, val := range v.Comments {
-			res.Comments[i] = val
-		}
-	}
-
-	return res
-}
