# gen/http/create/server/types.go
@@ -1,148 +1,0 @@
-// Code generated by goa v3.1.1, DO NOT EDIT.
-//
-// create HTTP server types
-//
-// Command:
-// $ goa gen crud/design
-
-package server
-
-import (
-	create "crud/gen/create"
-	"unicode/utf8"
-
-	goa "goa.design/goa/v3/pkg"
-)
-
-// CreateRequestBody is the type of the "create" service "create" endpoint HTTP
-// request body.
-type CreateRequestBody struct {
-	// ID of a person
-	ID *uint32 `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
-	// Name of person
-	Name *string `form:"name,omitempty" json:"name,omitempty" xml:"name,omitempty"`
-	// Comments
-	Comments []string `form:"comments,omitempty" json:"comments,omitempty" xml:"comments,omitempty"`
-}
-
-// UpdateRequestBody is the type of the "create" service "update" endpoint HTTP
-// request body.
-type UpdateRequestBody struct {
-	// Details of blog to be updated
-	Name *string `form:"name,omitempty" json:"name,omitempty" xml:"name,omitempty"`
-	// Comments to be updated
-	Comments []string `form:"comments,omitempty" json:"comments,omitempty" xml:"comments,omitempty"`
-}
-
-// CreateResponseBody is the type of the "create" service "create" endpoint
-// HTTP response body.
-type CreateResponseBody struct {
-	// ID of a person
-	ID *uint32 `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
-	// Name of person
-	Name *string `form:"name,omitempty" json:"name,omitempty" xml:"name,omitempty"`
-	// Comments
-	Comments []string `form:"comments,omitempty" json:"comments,omitempty" xml:"comments,omitempty"`
-}
-
-// ListResponseBody is the type of the "create" service "list" endpoint HTTP
-// response body.
-type ListResponseBody []*StoredblogResponse
-
-// StoredblogResponse is used to define fields on response body types.
-type StoredblogResponse struct {
-	// ID is the unique id of the blog.
-	ID uint32 `form:"id" json:"id" xml:"id"`
-	// Name of person
-	Name string `form:"name" json:"name" xml:"name"`
-	// Comments
-	Comments []string `form:"comments,omitempty" json:"comments,omitempty" xml:"comments,omitempty"`
-}
-
-// NewCreateResponseBody builds the HTTP response body from the result of the
-// "create" endpoint of the "create" service.
-func NewCreateResponseBody(res *create.Blog) *CreateResponseBody {
-	body := &CreateResponseBody{
-		ID:   res.ID,
-		Name: res.Name,
-	}
-	if res.Comments != nil {
-		body.Comments = make([]string, len(res.Comments))
-		for i, val := range res.Comments {
-			body.Comments[i] = val
-		}
-	}
-	return body
-}
-
-// NewListResponseBody builds the HTTP response body from the result of the
-// "list" endpoint of the "create" service.
-func NewListResponseBody(res []*create.Storedblog) ListResponseBody {
-	body := make([]*StoredblogResponse, len(res))
-	for i, val := range res {
-		body[i] = marshalCreateStoredblogToStoredblogResponse(val)
-	}
-	return body
-}
-
-// NewCreateBlog builds a create service create endpoint payload.
-func NewCreateBlog(body *CreateRequestBody) *create.Blog {
-	v := &create.Blog{
-		ID:   body.ID,
-		Name: body.Name,
-	}
-	if body.Comments != nil {
-		v.Comments = make([]string, len(body.Comments))
-		for i, val := range body.Comments {
-			v.Comments[i] = val
-		}
-	}
-
-	return v
-}
-
-// NewRemovePayload builds a create service remove endpoint payload.
-func NewRemovePayload(id uint32) *create.RemovePayload {
-	v := &create.RemovePayload{}
-	v.ID = id
-
-	return v
-}
-
-// NewUpdatePayload builds a create service update endpoint payload.
-func NewUpdatePayload(body *UpdateRequestBody, id uint32) *create.UpdatePayload {
-	v := &create.UpdatePayload{
-		Name: *body.Name,
-	}
-	v.Comments = make([]string, len(body.Comments))
-	for i, val := range body.Comments {
-		v.Comments[i] = val
-	}
-	v.ID = &id
-
-	return v
-}
-
-// ValidateCreateRequestBody runs the validations defined on CreateRequestBody
-func ValidateCreateRequestBody(body *CreateRequestBody) (err error) {
-	if body.Name != nil {
-		if utf8.RuneCountInString(*body.Name) > 100 {
-			err = goa.MergeErrors(err, goa.InvalidLengthError("body.name", *body.Name, utf8.RuneCountInString(*body.Name), 100, false))
-		}
-	}
-	if len(body.Comments) > 100 {
-		err = goa.MergeErrors(err, goa.InvalidLengthError("body.comments", body.Comments, len(body.Comments), 100, false))
-	}
-	return
-}
-
-// ValidateUpdateRequestBody runs the validations defined on UpdateRequestBody
-func ValidateUpdateRequestBody(body *UpdateRequestBody) (err error) {
-	if body.Name == nil {
-		err = goa.MergeErrors(err, goa.MissingFieldError("name", "body"))
-	}
-	if body.Comments == nil {
-		err = goa.MergeErrors(err, goa.MissingFieldError("comments", "body"))
-	}
-	return
-}
